<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/application_background"
    android:orientation="vertical"
    android:padding="0dp" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/rlheader" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/HeaderShow1"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/tvFirstName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/OrderConrm"
                android:textColor="@color/application_common_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvFirstNamereser"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/OrderConfirmation"
                android:textColor="@color/application_common_text"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/radious_login"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:orientation="horizontal"
                    android:weightSum="4" >

                    <TextView
                        android:id="@+id/ordertext"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_marginLeft="2dp"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:hint="Order"
                        android:paddingLeft="15dp"
                        android:paddingTop="4dp"
                        android:textColor="@color/application_common_text"
                        android:textColorHint="@color/application_common_text"
                        android:textSize="15sp"
                        android:textStyle="normal" >
                    </TextView>

                    <TextView
                        android:id="@+id/deliveryType"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_marginLeft="50dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingTop="4dp"
                        android:text="deliferf"
                        android:textColor="@color/application_common_text"
                        android:textColorHint="@color/application_text_color_hint"
                        android:textSize="15sp"
                        android:textStyle="normal" >
                    </TextView>

                    <TextView
                        android:id="@+id/dtime"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_marginLeft="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingTop="4dp"
                        android:text="deliferf"
                        android:textColor="@color/application_common_text"
                        android:textColorHint="@color/application_text_color_hint"
                        android:textSize="15sp"
                        android:textStyle="normal" >
                    </TextView>

                    <TextView
                        android:id="@+id/paymenttypo"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_marginLeft="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingTop="4dp"
                        android:text="deliferf"
                        android:textColor="@color/application_common_text"
                        android:textColorHint="@color/application_text_color_hint"
                        android:textSize="15sp"
                        android:textStyle="normal" >
                    </TextView>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/radious_login"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:orientation="horizontal"
                    android:weightSum="2" >

                    <TextView
                        android:id="@+id/usrname"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_marginLeft="2dp"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:hint="Name"
                        android:paddingLeft="15dp"
                        android:paddingTop="4dp"
                        android:textColor="@color/application_common_text"
                        android:textColorHint="@color/application_common_text"
                        android:textSize="15sp"
                        android:textStyle="normal" >
                    </TextView>

                    <TextView
                        android:id="@+id/fnametext"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_marginLeft="48dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingTop="4dp"
                        android:text="deliferf"
                        android:textColor="@color/application_common_text"
                        android:textColorHint="@color/application_text_color_hint"
                        android:textSize="15sp"
                        android:textStyle="normal" >
                    </TextView>

                    <TextView
                        android:id="@+id/lnametext"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingTop="4dp"
                        android:text="deliferf"
                        android:textColor="@color/application_common_text"
                        android:textColorHint="@color/application_text_color_hint"
                        android:textSize="15sp"
                        android:textStyle="normal" >
                    </TextView>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/radious_login"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:orientation="horizontal"
                    android:weightSum="2" >

                    <TextView
                        android:id="@+id/tel"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_marginLeft="2dp"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:hint="Tel"
                        android:paddingLeft="15dp"
                        android:paddingTop="4dp"
                        android:textColor="@color/application_common_text"
                        android:textColorHint="@color/application_common_text"
                        android:textSize="15sp"
                        android:textStyle="normal" >
                    </TextView>

                    <TextView
                        android:id="@+id/teltext"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_marginLeft="68dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingTop="4dp"
                        android:text="deliferf"
                        android:textColor="@color/application_common_text"
                        android:textColorHint="@color/application_text_color_hint"
                        android:textSize="15sp"
                        android:textStyle="normal" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/radious_login"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:orientation="horizontal"
                    android:weightSum="4" >

                    <TextView
                        android:id="@+id/totaltxt"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_marginLeft="2dp"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:hint="Total"
                        android:paddingLeft="15dp"
                        android:paddingTop="4dp"
                        android:textColor="@color/application_common_text"
                        android:textColorHint="@color/application_common_text"
                        android:textSize="15sp"
                        android:textStyle="normal" >
                    </TextView>

                    <TextView
                        android:id="@+id/totalnum"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_marginLeft="52dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingTop="4dp"
                        android:text="deliferf"
                        android:textColor="@color/application_common_text"
                        android:textColorHint="@color/application_text_color_hint"
                        android:textSize="15sp"
                        android:textStyle="normal" >
                    </TextView>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/radious_login"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:orientation="horizontal"
                    android:weightSum="2" >

                    <TextView
                        android:id="@+id/emailword"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_marginLeft="2dp"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:hint="Email"
                        android:paddingLeft="15dp"
                        android:paddingTop="4dp"
                        android:textColor="@color/application_common_text"
                        android:textColorHint="@color/application_common_text"
                        android:textSize="15sp"
                        android:textStyle="normal" >
                    </TextView>

                    <TextView
                        android:id="@+id/emailtxt"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_marginLeft="50dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingTop="4dp"
                        android:text="deliferf"
                        android:textColor="@color/application_common_text"
                        android:textColorHint="@color/application_text_color_hint"
                        android:textSize="15sp"
                        android:textStyle="normal" >
                    </TextView>
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/fbImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:src="@drawable/fb" >
            </ImageView>

            <TextView
                android:id="@+id/footertext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:paddingTop="3dp"
                android:text="@string/Footer"
                android:textColor="@color/application_common_text"
                android:textColorHint="@color/application_text_color_hint"
                android:textSize="15sp"
                android:textStyle="normal" >
            </TextView>

            <TextView
                android:id="@+id/callImg"
                android:layout_width="125dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_weight="2"
                android:background="@drawable/round_color_bg"
                android:drawableLeft="@drawable/call"
                android:gravity="center"
                android:onClick="onTapCall"
                android:paddingLeft="10dp"
                android:text="CALL"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:visibility="gone"/>
            <ImageView
                android:id="@+id/callUsBtn"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"

                android:background="@drawable/call_us"
                android:onClick="onTapCall" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>